trybuild-qcell/src/compiletest/qcell_noalloc-09.stderr
error[E0505]: cannot move out of `c1` because it is borrowed
  --> src/compiletest/qcell_noalloc-09.rs:13:10
   |
12 |     let c1ref = owner.as_ref().ro(&c1);
   |                                   --- borrow of `c1` occurs here
13 |     drop(c1);    // Compile error
   |          ^^ move out of `c1` occurs here
14 |     println!("{}", *c1ref);
   |                    ------ borrow later used here
